--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
 *.pyc
+.DS_Store
+.env
+.flaskenv
+*.pyo
+env/
+env*
+dist/
+build/
+*.egg
+*.egg-info/
+_mailinglist
+.tox/
+.cache/
+.pytest_cache/
+.idea/
+docs/_build/
+
+# Coverage reports
+htmlcov/
+.coverage
+.coverage.*
+*,cover
