--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,25 @@
+Click==7.0
+Flask==1.1.1
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+Werkzeug==0.15.6
+
 bcrypt==3.1.4
 blinker==1.4
 certifi==2016.2.28
 cffi==1.11.5
-click==6.7
-Flask==1.0
+
+
 Flask-Bcrypt==0.7.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
+
+
+
 Pillow==5.3.0
 pycparser==2.18
 six==1.11.0
