--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,6 @@ Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 
 
-
 Pillow==5.3.0
 pycparser==2.18
 six==1.11.0
@@ -34,5 +33,6 @@ wordcloud==1.5.0
 matplotlib==3.1.1
 xlrd==1.2.0
 
+scikit-learn==0.21.3
 sklearn==0.0
 gensim==3.8.1
