--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ Werkzeug==0.15.6
 
 bcrypt==3.1.4
 blinker==1.4
-certifi==2016.2.28
+certifi>=2017.4.17
 cffi==1.11.5
 
 
@@ -36,3 +36,4 @@ xlrd==1.2.0
 scikit-learn==0.21.3
 sklearn==0.0
 gensim==3.8.1
+python-dateutil<2.8.1,>=2.1
