--- a/app.yaml
+++ b/app.yaml
@@ -3,3 +3,10 @@ env: flex
 runtime: python
 runtime_config:
    python_version: 3
+instance_class: F2
+automatic_scaling:
+  target_cpu_utilization: 0.65
+  min_instances: 5
+  max_instances: 8
+  min_pending_latency: 30ms  # default value
+  max_pending_latency: automatic
