--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,9 @@
+api_version: 1
 entrypoint: "gunicorn -t 60 -b :$PORT app:app"
-instance_class: F2
+env: flex
 runtime: python
 runtime_config:
-   python_version: 3
+  python_version: 3
+
+threadsafe: true
 
